# sc3D

./: .gitignore  CITATION.cff  LICENSE  README.md  Spatial-differential-expression.ipynb  Test-embryo.ipynb  bumpver.toml  pyproject.toml  sc3D-visualiser.py  setup.cfg  setup.py  spec-file.txt  tox.ini
.github/workflows/: test_and_deploy.yml
data/: corresptissues.json  tissuescolor.json
notebooks/: Embryo-Registration.ipynb  Spatial-differential-expression.ipynb  Test-embryo.ipynb
src/: EmbryoAlignment.py  sc3D-visualiser  sc3D-visualiser.py
src/sc3D/: __init__.py  sc3D.py  transformations.py
src/sc3D/_tests/: test.py  test_sc3D.py
src/scSpatial/: scSpatial.py
txt/: references.bib  scSpatial.docx  scSpatial.tex
txt/figures/: interpolation.ai
