[metadata]
name = sc-3D
version = 1.2.0
author = Leo Guignard
author_email = leo.guignard@univ-amu.fr
url = https://github.com/GuignardLab/sc3D
license = MIT
description = Array alignment and 3D differential expression for 3D sc omics
long_description = file: README.md
long_description_content_type = text/markdown
summary = Array alignment and 3D differential expression for 3D sc omics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/GuignardLab/sc3D/issues
    Documentation = https://github.com/GuignardLab/sc3D#README.md
    Source Code = https://github.com/GuignardLab/sc3D
    User Support = https://github.com/GuignardLab/sc3D/issues
    Twitter = https://twitter.com/guignardlab
python_requires = >=3.8
classifier =
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    scipy
    numpy
    matplotlib
    pandas
    seaborn
    scikit-learn
    anndata

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.packages.find]
where = src